"Exepciones y Archivos implementado version 2"